--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <br>
             </div>
         </div>
-        <p style="text-transform: uppercase;  max-width: 100%; font-size:3vw; padding-top: 2%;">A little about myself...
+        <!-- <p style="text-transform: uppercase;  max-width: 100%; font-size:3vw; padding-top: 2%;">A little about myself...
         </p>
         <p style="padding-bottom: 2%;">
             I'm a story-teller at heart. I've always loved reading stories and thinking about how the characters
@@ -88,7 +88,7 @@
             overcome their problems. I bring this interest into my user experience work by trying to establish that
             very connection between me and the user. All that matters at the end of the day is that someone feels
             heard and understood.
-            <br><br>
+            <br><br> -->
 
 
 
