--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,9 @@
                 <p style="text-transform: uppercase; color: #F1EFDC; max-width: 100%; font-size:25px;">
                     Hey there!
                 <p style="color:#F1EFDC;">
-                    My work is motivated by a passion to design for everyone so that
+                    I'm a San Francisco-based artist and programmer. In my spare time, I like to read fantasy and run.
+
+                    <!-- My work is motivated by a passion to design for everyone so that
                     everyone has an equitable experience with my products. Not everyone has the same access to the
                     digital world as I do, so I take that into consideration whenever I start a new project. As the
                     world grows more dependent on digital spaces, I become more conscious of how my work can be
@@ -42,15 +44,15 @@
                     <br>
                     In my past, I've created my fair share of websites ever since I learned how to
                     program at the age of 15. I've played around with my limited experience by creating games in HTML,
-                    CSS, and JS, rethinking the way those languages can be used.
+                    CSS, and JS, rethinking the way those languages can be used. -->
+                    <!-- <br>
                     <br>
-                    <br>
-                    <!-- In my graphic and UI design experience, I started off with Canva, until I learned about my other
+                    In my graphic and UI design experience, I started off with Canva, until I learned about my other
                     options. Nowadays, I predominantly use Figma to prototype designs and Illustrator for final
-                    versions.
+                    versions. -->
                     <br>
-                    <br> -->
-                    During my time at San Jose State University, I earned my degree in Digital Media Art.
+                    <br>
+                    During my time at San Jose State University, I earned my degree in Digital Media Art in Fall 2023.
                 </p>
 
 
